<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@color/white"
    tools:context=".MainActivity">

    <Button
            android:text="@string/plus"
            android:textSize="30sp"
            android:textColor="#fff"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/button3"

            android:background = "@drawable/roundedbutton"
            app:cornerRadius="100dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="35dp" />

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="409dp"
            android:layout_height="729dp"
            tools:layout_editor_absoluteY="1dp"
            tools:layout_editor_absoluteX="1dp"
            tools:ignore="MissingConstraints"
            android:id="@+id/linearLayout">

        <TextView
                android:text="@string/dialog_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:textSize="22sp"
                android:id="@+id/textView" />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                        android:background="#ddeeff"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp">

                    <ImageView
                            android:src="@drawable/biden"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:id="@+id/bidenImage"
                            android:layout_weight="1" />

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                        <TextView
                                android:textSize="20sp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/biden_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:id="@+id/textView6" />

                        <TextView
                                android:layout_marginLeft="10dp"
                                android:text="@string/biden_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:id="@+id/textView7"
                                android:textColor="#546E7A" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                        android:background="#eeffdd"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp">

                    <ImageView
                            android:src="@drawable/tramp"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:id="@+id/trampImage"
                            android:layout_weight="1" />

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                        <TextView
                                android:textSize="20sp"
                                android:layout_marginLeft="10dp"
                                android:text="@string/tramp_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:id="@+id/textView4" />

                        <TextView
                                android:layout_marginLeft="10dp"
                                android:text="@string/tramp_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:id="@+id/textView5" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                        android:background="#ffdeee"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp">

                    <ImageView
                            android:src="@drawable/obama"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:id="@+id/obamaImage"
                            android:layout_weight="1" />

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                        <TextView
                                android:textSize="20sp"
                                android:layout_marginStart="10dp"
                                android:text="@string/obama_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:id="@+id/textView2" />

                        <TextView
                                android:layout_marginLeft="10dp"
                                android:text="@string/obama_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:id="@+id/textView3" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>